--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'DA'
 - !lcsh 'Scotland -- Social life and customs'
+- GITenberg
 title: Friend Mac Donald
 url: http://www.gutenberg.org/ebooks/33883
